# E-Taxi

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: base.toml  comet_v2.toml  formal_generalist.toml  generalization_eval.toml  real_nyc_2026.toml  smoke.toml  stress_eval.toml  ten_to_fifteen.toml  ten_to_fifteen_real.toml
scripts/: run_ten_to_fifteen.sh
src/comet_taxi/: __init__.py  baselines.py  buffer.py  cli.py  config.py  constants.py  data.py  env.py  evaluation.py  models.py  models.py.bak  planner.py  runtime.py  synthetic.py  trainer.py  utils.py  visualize.py
tests/: test_env.py  test_evaluation.py  test_models.py  test_planner.py  test_prepare.py  test_readme.py  test_training_smoke.py  test_visualize.py
